--- a/Modulo 2 TP1 html y css/home.html
+++ b/Modulo 2 TP1 html y css/home.html
@@ -3,53 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AER Aquarium</title>
+    <title>AER VULT</title>
     <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
 <body>
     <header class="banner">
+        <h1 class="aer">AerVULT</h1>
         <ul>
             <li>
-                HOME
+                ABOUT AER VULT
             </li>
             <li>
-                NOSOTROS
+                MISSION
             </li>
             <li>
-                CONTACTO
+                SUSTENTABILITY
+            </li>
+            <li>
+                AER & SYSTEMS
             </li>
         </ul>
     </header>
     <main>
         <div>
-            AerAquarium
-        </div>
-        <div>
-            <h2> Productos Disponibles </h2>
+            <h2> the  future   of  another  time,  beyond
+
+                where  dreams are born </h2>
+
             <article class="articulo">
-                <img src="" alt="img del articulo">
-                <p>
-                    Descrpcion del articulo
-                </p>
-                <p>
-                    Precio
-                </p>
+                <img src="" alt="img AER VULT">
                 <butoon>
-                    Ver Producto
+                    SEE MORE
                 </butoon>
             </article>
         </div>
         <footer>
             <div>
-                Todos los derechos reservados
+                A E R  V U L T      ©       2 0 2 3                P R I V A C Y    P O L I C Y
             </div>
-            <div>
+            <div class="MediaQueries">
                 <ul>
                     <li>
-                        HOME
+                        CONTACTO
                     </li>
                     <li>
-                        NOSOTROS
+                        CONTACTO
                     </li>
                     <li>
                         CONTACTO
